--- a/src/main/res/layout/item_grid_chip_adapter.xml
+++ b/src/main/res/layout/item_grid_chip_adapter.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView style="@style/Widget.Base.CardView"
+<com.google.android.material.card.MaterialCardView style="@style/Widget.Content.CardView"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,19 +7,21 @@
     android:layout_height="40dp"
     android:layout_margin="@dimen/layout_margin_small"
     card:cardBackgroundColor="?attr/colorOnPrimary"
-    card:strokeColor="?attr/colorSecondaryLight"
+    card:strokeColor="?attr/colorOnSecondary"
     card:strokeWidth="1dp"
     card:cardElevation="@dimen/layout_elevation_medium">
 
-    <androidx.constraintlayout.widget.ConstraintLayout style="@style/Container.Base.Fit"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/grid_chip_icon"
-            android:layout_width="@dimen/material_icon_size"
-            android:layout_height="@dimen/material_icon_size"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_margin="@dimen/layout_margin_medium"
-            android:src="@drawable/ic_folder"
+            android:src="@drawable/ic_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
