--- a/src/main/res/layout/layout_file_explorer_bar.xml
+++ b/src/main/res/layout/layout_file_explorer_bar.xml
@@ -5,54 +5,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSizeThin"
-    android:background="?attr/colorSecondaryDark"
+    android:layout_height="?attr/actionBarSize"
+    android:background="?attr/colorSecondaryVariant"
     tools:theme="@style/Theme.Content">
 
-    <androidx.constraintlayout.widget.ConstraintLayout style="@style/Container.Base.Fit">
-        <com.google.android.material.button.MaterialButton style="@style/Widget.Base.Button.TextButton.Icon"
-            android:id="@+id/btn_directory_up"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/layout_margin_small"
-            android:layout_marginEnd="@dimen/layout_margin_small"
-            android:text="Go up"
-            android:textStyle="bold"
-            android:textColor="?android:attr/textColorPrimaryInverse"
-            android:contentDescription="hf_no_number|Go Up"
-            app:icon="@drawable/ic_arrow_up"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+<!--    <androidx.constraintlayout.widget.ConstraintLayout style="@style/Container.Base.Fit">-->
+<!--        <com.google.android.material.button.MaterialButton style="@style/Widget.Base.Button.TextButton.Icon"-->
+<!--            android:id="@+id/btn_directory_up"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_marginStart="@dimen/layout_margin_small"-->
+<!--            android:layout_marginEnd="@dimen/layout_margin_small"-->
+<!--            android:text="Go up"-->
+<!--            android:textStyle="bold"-->
+<!--            android:textColor="?android:attr/textColorPrimaryInverse"-->
+<!--            android:contentDescription="hf_no_number|Go Up"-->
+<!--            app:icon="@drawable/ic_arrow_up"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"/>-->
 
-        <Spinner
-            android:id="@+id/spinner_directory_list"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:maxWidth="128dp"
-            android:layout_margin="@dimen/layout_margin_small"
-            android:background="@drawable/bg_rounded_box"
-            android:foregroundTint="?android:textColorPrimaryInverse"
-            android:contentDescription="hf_no_number|hf_show_text|Select Directory"
-            app:layout_constraintStart_toEndOf="@id/btn_directory_up"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+<!--        <Spinner-->
+<!--            android:id="@+id/spinner_directory_list"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:maxWidth="128dp"-->
+<!--            android:layout_margin="@dimen/layout_margin_small"-->
+<!--            android:background="@drawable/bg_rounded_box"-->
+<!--            android:foregroundTint="?android:textColorPrimaryInverse"-->
+<!--            android:contentDescription="hf_no_number|hf_show_text|Select Directory"-->
+<!--            app:layout_constraintStart_toEndOf="@id/btn_directory_up"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"/>-->
 
-        <com.google.android.material.button.MaterialButton style="@style/Widget.Base.Button.TextButton.Icon"
-            android:id="@+id/btn_filter"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/layout_margin_small"
-            android:layout_marginEnd="@dimen/layout_margin_small"
-            android:text="Filter"
-            android:textStyle="bold"
-            android:textColor="?android:attr/textColorPrimary"
-            android:contentDescription="hf_no_number|Filter"
-            app:backgroundTint="?android:attr/colorPrimary"
-            app:icon="@drawable/ic_filter_list"
-            app:iconTint="?android:attr/textColorPrimary"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+<!--        <com.google.android.material.button.MaterialButton style="@style/Widget.Base.Button.TextButton.Icon"-->
+<!--            android:id="@+id/btn_filter"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_marginStart="@dimen/layout_margin_small"-->
+<!--            android:layout_marginEnd="@dimen/layout_margin_small"-->
+<!--            android:text="Filter"-->
+<!--            android:textStyle="bold"-->
+<!--            android:textColor="?android:attr/textColorPrimary"-->
+<!--            android:contentDescription="hf_no_number|Filter"-->
+<!--            app:backgroundTint="?android:attr/colorPrimary"-->
+<!--            app:icon="@drawable/ic_filter_list"-->
+<!--            app:iconTint="?android:attr/textColorPrimary"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent" />-->
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
 </FrameLayout>
