--- a/src/main/res/layout/item_content_list.xml
+++ b/src/main/res/layout/item_content_list.xml
@@ -3,8 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.constraintlayout.widget.ConstraintLayout style="@style/Container.Base.Fit"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/content_title"
@@ -14,7 +16,7 @@
             android:layout_marginTop="@dimen/layout_margin_xsmall"
             android:layout_marginEnd="@dimen/layout_margin_small"
             android:layout_marginBottom="@dimen/layout_margin_xsmall"
-            android:textAppearance="@style/TextAppearance.Base.ListItem"
+            android:textAppearance="@style/TextAppearance.Core.Headline6"
             android:maxLines="2"
             android:ellipsize="marquee"
             android:gravity="start|center"
@@ -33,7 +35,7 @@
             android:layout_marginEnd="@dimen/layout_margin_small"
             android:layout_marginBottom="@dimen/layout_margin_xsmall"
             android:gravity="start|bottom"
-            android:textAppearance="@style/TextAppearance.Base.ListItem.Caption"
+            android:textAppearance="@style/TextAppearance.Core.Caption"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/content_title"
             app:layout_constraintEnd_toEndOf="parent"
