--- a/src/main/res/layout/item_document_search_list.xml
+++ b/src/main/res/layout/item_document_search_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout style="@style/Container.Flex.Background"
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <TextView style="@style/Widget.TextView.Dark"
+    <TextView
         android:id="@+id/file_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -39,7 +39,7 @@
         app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_hmt_divider"
         tools:text="TOP SECRET FILE. DO NOT OPEN. NO REALLY, PLEASE DO NOT."/>
 
-    <TextView style="@style/Widget.TextView.Dark"
+    <TextView
         android:id="@+id/hmt_content_descriptor"
         android:layout_width="0dp"
         android:layout_height="0dp"
