--- a/src/main/res/layout/item_grid_chip_adapter_hmt.xml
+++ b/src/main/res/layout/item_grid_chip_adapter_hmt.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout style="@style/Container.Base.Fit"
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginTop="@dimen/layout_margin_small"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/layout_margin_small">
 
     <include layout="@layout/item_grid_chip_adapter"
         android:id="@+id/layout_grid_chip_adapter_item"/>
